corrected overflow on contact form for more responsiveness

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,11 @@ body {
     background-position: top center;
     background-size: cover;
     width: 100%;
-    height: 100vh;
+    height: 90vh;
+    overflow: auto;
+    padding-top: 20px;
+    padding-bottom: 20px;
+
 }
 
 /*------------------------------sections------------------------------------*/
@@ -167,14 +171,12 @@ body {
 }
 
 .contact-header {
-    margin-top: 40px;
+    margin-top: 20px;
 }
 
 .form-box {
-    margin-bottom: 40px;
     margin-left: 10%;
     margin-right: 10%;
-    
 }
 
 /*------------------------------footer------------------------------------*/
